--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ a{
 #showcase{
 	margin: 0;
 	padding: 0;
-	background:url(images/education.jpg) no-repeat center/cover;
+	background:url(education.jpg) no-repeat center/cover;
 	background-attachment:fixed;
 	width: 100%;
 	height: 100vh;
